add_library( meshTools )
target_link_libraries( meshTools
  PRIVATE
  OpenFOAM
  fileFormats

  PUBLIC
  triSurface
)
target_include_directories( meshTools
  PUBLIC
  .
)
target_sources( meshTools
  PRIVATE
  algorithms/FaceCellWave/FaceCellWaveName.C
  algorithms/PatchEdgeFaceWave/PatchEdgeFaceWaveName.C
  algorithms/PatchEdgeFaceWave/patchPatchDist.C
  algorithms/PointEdgeWave/PointEdgeWaveName.C
  cellClassification/cellClassification.C
  cellClassification/cellInfo.C
  cellFeatures/cellFeatures.C
  cellQuality/cellQuality.C
  cellsToCells/cellsToCells/cellsToCells.C
  cellsToCells/cellsToCells/cellsToCellsParallelOps.C
  cellsToCells/cellsToCellsStabilisation/cellsToCellsStabilisation.C
  cellsToCells/intersection/intersectionCellsToCells.C
  cellsToCells/matching/matchingCellsToCells.C
  cellsToCells/nearest/nearestCellsToCells.C
  coordinateSystems/cartesianCS.C
  coordinateSystems/coordinateRotation/EulerCoordinateRotation.C
  coordinateSystems/coordinateRotation/STARCDCoordinateRotation.C
  coordinateSystems/coordinateRotation/axesRotation.C
  coordinateSystems/coordinateRotation/coordinateRotation.C
  coordinateSystems/coordinateRotation/coordinateRotationNew.C
  coordinateSystems/coordinateRotation/cylindrical.C
  coordinateSystems/coordinateSystem.C
  coordinateSystems/coordinateSystemNew.C
  coordinateSystems/coordinateSystems.C
  coordinateSystems/cylindricalCS.C
  cutPoly/cellEdgeAddressing.C
  cutPoly/cutPoly.C
  cutPoly/cutPolyIsoSurface.C
  edgeFaceCirculator/edgeFaceCirculator.C
  edgeMesh/edgeMesh.C
  edgeMesh/edgeMeshFormats/edgeMesh/edgeMeshFormat.C
  edgeMesh/edgeMeshFormats/edgeMesh/edgeMeshFormatRunTime.C
  edgeMesh/edgeMeshFormats/edgeMeshFormatsCore.C
  edgeMesh/edgeMeshFormats/extendedFeatureEdgeMesh/extendedFeatureEdgeMeshFormat.C
  edgeMesh/edgeMeshFormats/extendedFeatureEdgeMesh/extendedFeatureEdgeMeshFormatRunTime.C
  edgeMesh/edgeMeshFormats/nas/NASedgeFormat.C
  edgeMesh/edgeMeshFormats/nas/NASedgeFormatRunTime.C
  edgeMesh/edgeMeshFormats/obj/OBJedgeFormat.C
  edgeMesh/edgeMeshFormats/obj/OBJedgeFormatRunTime.C
  edgeMesh/edgeMeshFormats/starcd/STARCDedgeFormat.C
  edgeMesh/edgeMeshFormats/starcd/STARCDedgeFormatRunTime.C
  edgeMesh/edgeMeshFormats/vtk/VTKedgeFormat.C
  edgeMesh/edgeMeshFormats/vtk/VTKedgeFormatRunTime.C
  edgeMesh/edgeMeshIO.C
  edgeMesh/edgeMeshNew.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMesh.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshFormats/extendedEdgeMeshFormat/extendedEdgeMeshFormat.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshFormats/extendedEdgeMeshFormat/extendedEdgeMeshFormatRunTime.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshNew.C
  edgeMesh/extendedEdgeMesh/extendedFeatureEdgeMesh/extendedFeatureEdgeMesh.C
  edgeMesh/featureEdgeMesh/featureEdgeMesh.C
  indexedOctree/treeDataEdge.C
  indexedOctree/treeDataFace.C
  indexedOctree/treeDataPoint.C
  indexedOctree/treeDataPrimitivePatchName.C
  indexedOctree/treeDataTriSurface.C
  mappedPatches/mappedExtrudedPatchBase/mappedExtrudedPatchBase.C
  mappedPatches/mappedExtrudedPointPatch/mappedExtrudedWallPointPatch.C
  mappedPatches/mappedExtrudedPolyPatch/mappedExtrudedWallPolyPatch.C
  mappedPatches/mappedInternalPatchBase/mappedInternalPatchBase.C
  mappedPatches/mappedInternalPointPatch/mappedInternalPointPatch.C
  mappedPatches/mappedInternalPolyPatch/mappedInternalPolyPatch.C
  mappedPatches/mappedPatchBase/mappedPatchBase.C
  mappedPatches/mappedPointPatch/mappedPointPatch.C
  mappedPatches/mappedPointPatch/mappedWallPointPatch.C
  mappedPatches/mappedPolyPatch/mappedPolyPatch.C
  mappedPatches/mappedPolyPatch/mappedWallPolyPatch.C
  meshSearch/meshSearch.C
  meshSearch/meshSearchFACE_CENTRE_TRISMeshObject.C
  meshSearch/meshSearchMeshObject.C
  meshStructure/meshStructure.C
  meshStructure/pointTopoDistanceData.C
  meshStructure/topoDistanceData.C
  meshToMesh/meshToMesh.C
  meshTools/meshTools.C
  momentOfInertia/momentOfInertia.C
  nonConformal/boundary/nonConformalBoundary.C
  nonConformal/pointPatchFields/nonConformalCyclic/nonConformalCyclicPointPatchFields.C
  nonConformal/pointPatchFields/nonConformalError/nonConformalErrorPointPatchFields.C
  nonConformal/pointPatchFields/nonConformalProcessorCyclic/nonConformalProcessorCyclicPointPatchFields.C
  nonConformal/pointPatches/nonConformalCyclic/nonConformalCyclicPointPatch.C
  nonConformal/pointPatches/nonConformalError/nonConformalErrorPointPatch.C
  nonConformal/pointPatches/nonConformalProcessorCyclic/nonConformalProcessorCyclicPointPatch.C
  nonConformal/polyPatches/nonConformal/nonConformalPolyPatch.C
  nonConformal/polyPatches/nonConformalCoupled/nonConformalCoupledPolyPatch.C
  nonConformal/polyPatches/nonConformalCyclic/nonConformalCyclicPolyPatch.C
  nonConformal/polyPatches/nonConformalError/nonConformalErrorPolyPatch.C
  nonConformal/polyPatches/nonConformalProcessorCyclic/nonConformalProcessorCyclicPolyPatch.C
  patchDist/patchDistWave/patchDistWave.C
  patchToPatch/intersection/intersectionPatchToPatch.C
  patchToPatch/inverseDistance/inverseDistancePatchToPatch.C
  patchToPatch/matching/matchingPatchToPatch.C
  patchToPatch/nearby/nearbyPatchToPatch.C
  patchToPatch/nearest/nearestPatchToPatch.C
  patchToPatch/patchToPatch/patchToPatch.C
  patchToPatch/patchToPatch/patchToPatchParallelOps.C
  patchToPatch/patchToPatchStabilisation/patchToPatchStabilisation.C
  patchToPatch/rays/raysPatchToPatch.C
  patchToPatchTools/patchToPatchTools.C
  polyMeshZipUpCells/polyMeshZipUpCells.C
  regionSplit/localPointRegion.C
  regionSplit/regionSplit.C
  searchableSurfaces/closedTriSurfaceMesh/closedTriSurfaceMesh.C
  searchableSurfaces/searchableBox/searchableBox.C
  searchableSurfaces/searchableCylinder/searchableCylinder.C
  searchableSurfaces/searchableDisk/searchableDisk.C
  searchableSurfaces/searchableExtrudedCircle/searchableExtrudedCircle.C
  searchableSurfaces/searchablePlane/searchablePlane.C
  searchableSurfaces/searchablePlate/searchablePlate.C
  searchableSurfaces/searchableSphere/searchableSphere.C
  searchableSurfaces/searchableSurface/searchableSurface.C
  searchableSurfaces/searchableSurfaceCollection/searchableSurfaceCollection.C
  searchableSurfaces/searchableSurfaceWithGaps/searchableSurfaceWithGaps.C
  searchableSurfaces/searchableSurfaces/searchableSurfaces.C
  searchableSurfaces/searchableSurfacesQueries/searchableSurfacesQueries.C
  searchableSurfaces/triSurfaceMesh/extractCloseness.C
  searchableSurfaces/triSurfaceMesh/triSurfaceMesh.C
  sets/cellSources/boxToCell/boxToCell.C
  sets/cellSources/cellToCell/cellToCell.C
  sets/cellSources/cylinderAnnulusToCell/cylinderAnnulusToCell.C
  sets/cellSources/cylinderToCell/cylinderToCell.C
  sets/cellSources/faceToCell/faceToCell.C
  sets/cellSources/faceZoneToCell/faceZoneToCell.C
  sets/cellSources/labelToCell/labelToCell.C
  sets/cellSources/nbrToCell/nbrToCell.C
  sets/cellSources/nearestToCell/nearestToCell.C
  sets/cellSources/patchDistanceToCell/patchDistanceToCell.C
  sets/cellSources/pointToCell/pointToCell.C
  sets/cellSources/regionToCell/regionToCell.C
  sets/cellSources/rotatedBoxToCell/rotatedBoxToCell.C
  sets/cellSources/shapeToCell/shapeToCell.C
  sets/cellSources/sphereToCell/sphereToCell.C
  sets/cellSources/surfaceToCell/surfaceToCell.C
  sets/cellSources/targetVolumeToCell/targetVolumeToCell.C
  sets/cellSources/zoneToCell/zoneToCell.C
  sets/cellZoneSources/setToCellZone/setToCellZone.C
  sets/faceSources/boundaryToFace/boundaryToFace.C
  sets/faceSources/boxToFace/boxToFace.C
  sets/faceSources/cellToFace/cellToFace.C
  sets/faceSources/cylinderAnnulusToFace/cylinderAnnulusToFace.C
  sets/faceSources/cylinderToFace/cylinderToFace.C
  sets/faceSources/faceToFace/faceToFace.C
  sets/faceSources/labelToFace/labelToFace.C
  sets/faceSources/normalToFace/normalToFace.C
  sets/faceSources/patchToFace/patchToFace.C
  sets/faceSources/pointToFace/pointToFace.C
  sets/faceSources/regionToFace/regionToFace.C
  sets/faceSources/rotatedBoxToFace/rotatedBoxToFace.C
  sets/faceSources/zoneToFace/zoneToFace.C
  sets/faceZoneSources/faceZoneToFaceZone/faceZoneToFaceZone.C
  sets/faceZoneSources/planeToFaceZone/planeToFaceZone.C
  sets/faceZoneSources/searchableSurfaceToFaceZone/searchableSurfaceToFaceZone.C
  sets/faceZoneSources/setAndNormalToFaceZone/setAndNormalToFaceZone.C
  sets/faceZoneSources/setToFaceZone/setToFaceZone.C
  sets/faceZoneSources/setsToFaceZone/setsToFaceZone.C
  sets/pointSources/boxToPoint/boxToPoint.C
  sets/pointSources/cellToPoint/cellToPoint.C
  sets/pointSources/faceToPoint/faceToPoint.C
  sets/pointSources/labelToPoint/labelToPoint.C
  sets/pointSources/nearestToPoint/nearestToPoint.C
  sets/pointSources/pointToPoint/pointToPoint.C
  sets/pointSources/surfaceToPoint/surfaceToPoint.C
  sets/pointSources/zoneToPoint/zoneToPoint.C
  sets/pointZoneSources/setToPointZone/setToPointZone.C
  sets/polyCellSet/polyCellSet.C
  sets/topoSetSource/topoSetSource.C
  sets/topoSets/cellSet.C
  sets/topoSets/cellZoneSet.C
  sets/topoSets/faceSet.C
  sets/topoSets/faceZoneSet.C
  sets/topoSets/pointSet.C
  sets/topoSets/pointZoneSet.C
  sets/topoSets/topoSet.C
  surfaceSets/surfaceSets.C
  tetOverlapVolume/tetOverlapVolume.C
  triIntersect/triIntersect.C
  triIntersect/triIntersectLocationIO.C
  triSurface/booleanOps/booleanSurface/booleanSurface.C
  triSurface/booleanOps/intersectedSurface/edgeSurface.C
  triSurface/booleanOps/intersectedSurface/intersectedSurface.C
  triSurface/booleanOps/surfaceIntersection/edgeIntersections.C
  triSurface/booleanOps/surfaceIntersection/surfaceIntersection.C
  triSurface/booleanOps/surfaceIntersection/surfaceIntersectionFuncs.C
  triSurface/orientedSurface/orientedSurface.C
  triSurface/surfaceFeatures/surfaceFeatures.C
  triSurface/surfaceLocation/surfaceLocation.C
  triSurface/triSurfaceSearch/triSurfaceRegionSearch.C
  triSurface/triSurfaceSearch/triSurfaceSearch.C
  triSurface/triSurfaceTools/geompack/geompack.C
  triSurface/triSurfaceTools/pointToPointPlanarInterpolation.C
  triSurface/triSurfaceTools/triSurfaceTools.C
  triSurface/triangleFuncs/triangleFuncs.C
  twoDPointCorrector/twoDPointCorrector.C

  PRIVATE
  FILE_SET HEADERS
  FILES
  PrimitiveOldTimePatch/PrimitiveOldTimePatch.H
  PrimitiveOldTimePatch/primitiveOldTimePatch.H
  PrimitiveOldTimePatch/uindirectPrimitiveOldTimePatch.H
  algorithms/FaceCellWave/FaceCellWave.H
  algorithms/PatchEdgeFaceWave/PatchEdgeFacePointData.H
  algorithms/PatchEdgeFaceWave/PatchEdgeFacePointDataI.H
  algorithms/PatchEdgeFaceWave/PatchEdgeFaceWave.H
  algorithms/PatchEdgeFaceWave/patchEdgeFacePoint.H
  algorithms/PatchEdgeFaceWave/patchEdgeFacePointI.H
  algorithms/PatchEdgeFaceWave/patchEdgeFaceRegion.H
  algorithms/PatchEdgeFaceWave/patchEdgeFaceRegionI.H
  algorithms/PatchEdgeFaceWave/patchEdgeFaceRegions.H
  algorithms/PatchEdgeFaceWave/patchEdgeFaceRegionsI.H
  algorithms/PatchEdgeFaceWave/patchPatchDist.H
  algorithms/PointEdgeWave/PointEdgeWave.H
  algorithms/PointEdgeWave/pointEdgePoint.H
  algorithms/PointEdgeWave/pointEdgePointI.H
  cellClassification/cellClassification.H
  cellClassification/cellInfo.H
  cellClassification/cellInfoI.H
  cellFeatures/cellFeatures.H
  cellQuality/cellQuality.H
  cellsToCells/cellsToCells/cellsToCells.H
  cellsToCells/cellsToCells/cellsToCellsI.H
  cellsToCells/cellsToCellsStabilisation/cellsToCellsStabilisation.H
  cellsToCells/intersection/intersectionCellsToCells.H
  cellsToCells/matching/matchingCellsToCells.H
  cellsToCells/nearest/nearestCellsToCells.H
  coordinateSystems/cartesianCS.H
  coordinateSystems/coordinateRotation/EulerCoordinateRotation.H
  coordinateSystems/coordinateRotation/STARCDCoordinateRotation.H
  coordinateSystems/coordinateRotation/axesRotation.H
  coordinateSystems/coordinateRotation/coordinateRotation.H
  coordinateSystems/coordinateRotation/cylindrical.H
  coordinateSystems/coordinateSystem.H
  coordinateSystems/coordinateSystems.H
  coordinateSystems/cylindricalCS.H
  cutPoly/cellEdgeAddressing.H
  cutPoly/cellEdgeAddressingI.H
  cutPoly/cutPoly.H
  cutPoly/cutPolyIntegral.H
  cutPoly/cutPolyIsoSurface.H
  cutPoly/cutPolyValue.H
  cutPoly/cutPolyValueI.H
  cutTriTet/cutTriTet.H
  cutTriTet/cutTriTetI.H
  edgeFaceCirculator/edgeFaceCirculator.H
  edgeFaceCirculator/edgeFaceCirculatorI.H
  edgeMesh/edgeMesh.H
  edgeMesh/edgeMeshFormats/edgeMesh/edgeMeshFormat.H
  edgeMesh/edgeMeshFormats/edgeMeshFormatsCore.H
  edgeMesh/edgeMeshFormats/extendedFeatureEdgeMesh/extendedFeatureEdgeMeshFormat.H
  edgeMesh/edgeMeshFormats/nas/NASedgeFormat.H
  edgeMesh/edgeMeshFormats/obj/OBJedgeFormat.H
  edgeMesh/edgeMeshFormats/starcd/STARCDedgeFormat.H
  edgeMesh/edgeMeshFormats/vtk/VTKedgeFormat.H
  edgeMesh/edgeMeshI.H
  edgeMesh/extendedEdgeMesh/extendedEdgeMesh.H
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshFormats/extendedEdgeMeshFormat/extendedEdgeMeshFormat.H
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshI.H
  edgeMesh/extendedEdgeMesh/extendedFeatureEdgeMesh/extendedFeatureEdgeMesh.H
  edgeMesh/extendedEdgeMesh/extendedFeatureEdgeMesh/extendedFeatureEdgeMeshI.H
  edgeMesh/featureEdgeMesh/featureEdgeMesh.H
  indexedOctree/treeDataEdge.H
  indexedOctree/treeDataFace.H
  indexedOctree/treeDataPoint.H
  indexedOctree/treeDataPrimitivePatch.H
  indexedOctree/treeDataTriSurface.H
  layerInfo/LayerInfoData.H
  layerInfo/LayerInfoDataI.H
  layerInfo/PointEdgeLayerInfoData.H
  layerInfo/PointEdgeLayerInfoDataI.H
  layerInfo/layerInfo.H
  layerInfo/layerInfoI.H
  layerInfo/pointEdgeLayerInfo.H
  layerInfo/pointEdgeLayerInfoI.H
  mappedPatches/mappedExtrudedPatchBase/mappedExtrudedPatchBase.H
  mappedPatches/mappedExtrudedPointPatch/mappedExtrudedWallPointPatch.H
  mappedPatches/mappedExtrudedPolyPatch/mappedExtrudedWallPolyPatch.H
  mappedPatches/mappedInternalPatchBase/mappedInternalPatchBase.H
  mappedPatches/mappedInternalPatchBase/mappedInternalPatchBaseI.H
  mappedPatches/mappedInternalPointPatch/mappedInternalPointPatch.H
  mappedPatches/mappedInternalPolyPatch/mappedInternalPolyPatch.H
  mappedPatches/mappedPatchBase/mappedPatchBase.H
  mappedPatches/mappedPatchBase/mappedPatchBaseI.H
  mappedPatches/mappedPointPatch/mappedPointPatch.H
  mappedPatches/mappedPointPatch/mappedWallPointPatch.H
  mappedPatches/mappedPolyPatch/mappedPolyPatch.H
  mappedPatches/mappedPolyPatch/mappedWallPolyPatch.H
  meshSearch/meshSearch.H
  meshSearch/meshSearchFACE_CENTRE_TRISMeshObject.H
  meshSearch/meshSearchMeshObject.H
  meshStructure/meshStructure.H
  meshStructure/meshStructureI.H
  meshStructure/pointTopoDistanceData.H
  meshStructure/pointTopoDistanceDataI.H
  meshStructure/topoDistanceData.H
  meshStructure/topoDistanceDataI.H
  meshToMesh/meshToMesh.H
  meshToMesh/meshToMeshI.H
  meshTools/meshTools.H
  momentOfInertia/momentOfInertia.H
  nonConformal/boundary/nonConformalBoundary.H
  nonConformal/pointPatchFields/nonConformalCyclic/nonConformalCyclicPointPatchField.H
  nonConformal/pointPatchFields/nonConformalCyclic/nonConformalCyclicPointPatchFields.H
  nonConformal/pointPatchFields/nonConformalError/nonConformalErrorPointPatchField.H
  nonConformal/pointPatchFields/nonConformalError/nonConformalErrorPointPatchFields.H
  nonConformal/pointPatchFields/nonConformalProcessorCyclic/nonConformalProcessorCyclicPointPatchField.H
  nonConformal/pointPatchFields/nonConformalProcessorCyclic/nonConformalProcessorCyclicPointPatchFields.H
  nonConformal/pointPatches/nonConformalCyclic/nonConformalCyclicPointPatch.H
  nonConformal/pointPatches/nonConformalError/nonConformalErrorPointPatch.H
  nonConformal/pointPatches/nonConformalProcessorCyclic/nonConformalProcessorCyclicPointPatch.H
  nonConformal/polyPatches/nonConformal/nonConformalPolyPatch.H
  nonConformal/polyPatches/nonConformalCoupled/nonConformalCoupledPolyPatch.H
  nonConformal/polyPatches/nonConformalCyclic/nonConformalCyclicPolyPatch.H
  nonConformal/polyPatches/nonConformalError/nonConformalErrorPolyPatch.H
  nonConformal/polyPatches/nonConformalProcessorCyclic/nonConformalProcessorCyclicPolyPatch.H
  patchDist/WallInfo/WallInfo.H
  patchDist/WallInfo/WallInfoI.H
  patchDist/WallLocation/WallLocationData.H
  patchDist/WallLocation/WallLocationDataI.H
  patchDist/WallLocation/wallFace.H
  patchDist/WallLocation/wallFaceI.H
  patchDist/WallLocation/wallPoint.H
  patchDist/WallLocation/wallPointI.H
  patchDist/patchDistWave/patchDistWave.H
  patchToPatch/intersection/intersectionPatchToPatch.H
  patchToPatch/intersection/intersectionPatchToPatchI.H
  patchToPatch/inverseDistance/inverseDistancePatchToPatch.H
  patchToPatch/matching/matchingPatchToPatch.H
  patchToPatch/nearby/nearbyPatchToPatch.H
  patchToPatch/nearest/nearestPatchToPatch.H
  patchToPatch/patchToPatch/patchToPatch.H
  patchToPatch/patchToPatch/patchToPatchI.H
  patchToPatch/patchToPatchStabilisation/patchToPatchStabilisation.H
  patchToPatch/rays/raysPatchToPatch.H
  patchToPatchTools/patchToPatchTools.H
  polyMeshZipUpCells/polyMeshZipUpCells.H
  regionSplit/localPointRegion.H
  regionSplit/minData.H
  regionSplit/minDataI.H
  regionSplit/regionSplit.H
  searchableSurfaces/closedTriSurfaceMesh/closedTriSurfaceMesh.H
  searchableSurfaces/searchableBox/searchableBox.H
  searchableSurfaces/searchableCylinder/searchableCylinder.H
  searchableSurfaces/searchableDisk/searchableDisk.H
  searchableSurfaces/searchableExtrudedCircle/searchableExtrudedCircle.H
  searchableSurfaces/searchablePlane/searchablePlane.H
  searchableSurfaces/searchablePlate/searchablePlate.H
  searchableSurfaces/searchableSphere/searchableSphere.H
  searchableSurfaces/searchableSurface/searchableSurface.H
  searchableSurfaces/searchableSurfaceCollection/searchableSurfaceCollection.H
  searchableSurfaces/searchableSurfaceWithGaps/searchableSurfaceWithGaps.H
  searchableSurfaces/searchableSurfaces/searchableSurfaces.H
  searchableSurfaces/searchableSurfacesQueries/searchableSurfacesQueries.H
  searchableSurfaces/triSurfaceMesh/triSurfaceMesh.H
  sets/cellSources/boxToCell/boxToCell.H
  sets/cellSources/cellToCell/cellToCell.H
  sets/cellSources/cylinderAnnulusToCell/cylinderAnnulusToCell.H
  sets/cellSources/cylinderToCell/cylinderToCell.H
  sets/cellSources/faceToCell/faceToCell.H
  sets/cellSources/faceZoneToCell/faceZoneToCell.H
  sets/cellSources/labelToCell/labelToCell.H
  sets/cellSources/nbrToCell/nbrToCell.H
  sets/cellSources/nearestToCell/nearestToCell.H
  sets/cellSources/patchDistanceToCell/patchDistanceToCell.H
  sets/cellSources/pointToCell/pointToCell.H
  sets/cellSources/regionToCell/regionToCell.H
  sets/cellSources/rotatedBoxToCell/rotatedBoxToCell.H
  sets/cellSources/shapeToCell/shapeToCell.H
  sets/cellSources/sphereToCell/sphereToCell.H
  sets/cellSources/surfaceToCell/surfaceToCell.H
  sets/cellSources/targetVolumeToCell/targetVolumeToCell.H
  sets/cellSources/zoneToCell/zoneToCell.H
  sets/cellZoneSources/setToCellZone/setToCellZone.H
  sets/faceSources/boundaryToFace/boundaryToFace.H
  sets/faceSources/boxToFace/boxToFace.H
  sets/faceSources/cellToFace/cellToFace.H
  sets/faceSources/cylinderAnnulusToFace/cylinderAnnulusToFace.H
  sets/faceSources/cylinderToFace/cylinderToFace.H
  sets/faceSources/faceToFace/faceToFace.H
  sets/faceSources/labelToFace/labelToFace.H
  sets/faceSources/normalToFace/normalToFace.H
  sets/faceSources/patchToFace/patchToFace.H
  sets/faceSources/pointToFace/pointToFace.H
  sets/faceSources/regionToFace/regionToFace.H
  sets/faceSources/rotatedBoxToFace/rotatedBoxToFace.H
  sets/faceSources/zoneToFace/zoneToFace.H
  sets/faceZoneSources/faceZoneToFaceZone/faceZoneToFaceZone.H
  sets/faceZoneSources/planeToFaceZone/planeToFaceZone.H
  sets/faceZoneSources/searchableSurfaceToFaceZone/searchableSurfaceToFaceZone.H
  sets/faceZoneSources/setAndNormalToFaceZone/setAndNormalToFaceZone.H
  sets/faceZoneSources/setToFaceZone/setToFaceZone.H
  sets/faceZoneSources/setsToFaceZone/setsToFaceZone.H
  sets/pointSources/boxToPoint/boxToPoint.H
  sets/pointSources/cellToPoint/cellToPoint.H
  sets/pointSources/faceToPoint/faceToPoint.H
  sets/pointSources/labelToPoint/labelToPoint.H
  sets/pointSources/nearestToPoint/nearestToPoint.H
  sets/pointSources/pointToPoint/pointToPoint.H
  sets/pointSources/surfaceToPoint/surfaceToPoint.H
  sets/pointSources/zoneToPoint/zoneToPoint.H
  sets/pointZoneSources/setToPointZone/setToPointZone.H
  sets/polyCellSet/polyCellSet.H
  sets/polyCellSet/polyCellSetI.H
  sets/topoSetSource/topoSetSource.H
  sets/topoSets/cellSet.H
  sets/topoSets/cellZoneSet.H
  sets/topoSets/faceSet.H
  sets/topoSets/faceZoneSet.H
  sets/topoSets/pointSet.H
  sets/topoSets/pointZoneSet.H
  sets/topoSets/topoSet.H
  surfaceSets/surfaceSets.H
  tetOverlapVolume/tetOverlapVolume.H
  triIntersect/triIntersect.H
  triIntersect/triIntersectLocation.H
  triIntersect/triIntersectLocationI.H
  triSurface/booleanOps/booleanSurface/booleanSurface.H
  triSurface/booleanOps/intersectedSurface/edgeSurface.H
  triSurface/booleanOps/intersectedSurface/intersectedSurface.H
  triSurface/booleanOps/surfaceIntersection/edgeIntersections.H
  triSurface/booleanOps/surfaceIntersection/surfaceIntersection.H
  triSurface/orientedSurface/orientedSurface.H
  triSurface/surfaceFeatures/surfaceFeatures.H
  triSurface/surfaceLocation/surfaceLocation.H
  triSurface/triSurfaceSearch/triSurfaceRegionSearch.H
  triSurface/triSurfaceSearch/triSurfaceSearch.H
  triSurface/triSurfaceTools/geompack/geompack.H
  triSurface/triSurfaceTools/pointToPointPlanarInterpolation.H
  triSurface/triSurfaceTools/triSurfaceTools.H
  triSurface/triangleFuncs/triangleFuncs.H
  twoDPointCorrector/twoDPointCorrector.H
)
install( TARGETS meshTools )
