add_library( rigidBodyDynamics )
target_link_libraries( rigidBodyDynamics
  PRIVATE
  OpenFOAM
  OSspecific
)
target_include_directories( rigidBodyDynamics
  PUBLIC
  .
)
target_sources( rigidBodyDynamics
  PRIVATE
  bodies/compositeBody/compositeBody.C
  bodies/cuboid/cuboid.C
  bodies/jointBody/jointBody.C
  bodies/masslessBody/masslessBody.C
  bodies/rigidBody/rigidBody.C
  bodies/sphere/sphere.C
  bodies/subBody/subBody.C
  joints/Pa/Pa.C
  joints/Px/Px.C
  joints/Pxyz/Pxyz.C
  joints/Py/Py.C
  joints/Pz/Pz.C
  joints/Ra/Ra.C
  joints/Rs/Rs.C
  joints/Rx/Rx.C
  joints/Rxyz/Rxyz.C
  joints/Ry/Ry.C
  joints/Ryxz/Ryxz.C
  joints/Rz/Rz.C
  joints/Rzyx/Rzyx.C
  joints/composite/compositeJoint.C
  joints/floating/floatingJoint.C
  joints/function/function.C
  joints/functionDot/functionDot.C
  joints/joint/joint.C
  joints/null/nullJoint.C
  joints/rigid/rigid.C
  joints/rotating/rotating.C
  restraints/externalForce/externalForce.C
  restraints/linearAxialAngularSpring/linearAxialAngularSpring.C
  restraints/linearDamper/linearDamper.C
  restraints/linearSpring/linearSpring.C
  restraints/restraint/rigidBodyRestraint.C
  restraints/restraint/rigidBodyRestraintNew.C
  restraints/sphericalAngularDamper/sphericalAngularDamper.C
  rigidBodyModel/forwardDynamics.C
  rigidBodyModel/rigidBodyModel.C
  rigidBodyModelState/rigidBodyModelState.C
  rigidBodyModelState/rigidBodyModelStateIO.C
  rigidBodyMotion/rigidBodyMotion.C
  rigidBodyMotion/rigidBodyMotionIO.C
  rigidBodySolvers/CrankNicolson/CrankNicolson.C
  rigidBodySolvers/Newmark/Newmark.C
  rigidBodySolvers/rigidBodySolver/rigidBodySolver.C
  rigidBodySolvers/rigidBodySolver/rigidBodySolverNew.C
  rigidBodySolvers/symplectic/symplectic.C

  PRIVATE
  FILE_SET HEADERS
  FILES
  bodies/compositeBody/compositeBody.H
  bodies/compositeBody/compositeBodyI.H
  bodies/cuboid/cuboid.H
  bodies/cuboid/cuboidI.H
  bodies/jointBody/jointBody.H
  bodies/jointBody/jointBodyI.H
  bodies/masslessBody/masslessBody.H
  bodies/masslessBody/masslessBodyI.H
  bodies/rigidBody/rigidBody.H
  bodies/rigidBody/rigidBodyI.H
  bodies/sphere/sphere.H
  bodies/sphere/sphereI.H
  bodies/subBody/subBody.H
  bodies/subBody/subBodyI.H
  joints/Pa/Pa.H
  joints/Px/Px.H
  joints/Pxyz/Pxyz.H
  joints/Py/Py.H
  joints/Pz/Pz.H
  joints/Ra/Ra.H
  joints/Rs/Rs.H
  joints/Rx/Rx.H
  joints/Rxyz/Rxyz.H
  joints/Ry/Ry.H
  joints/Ryxz/Ryxz.H
  joints/Rz/Rz.H
  joints/Rzyx/Rzyx.H
  joints/composite/compositeJoint.H
  joints/floating/floatingJoint.H
  joints/function/function.H
  joints/functionDot/functionDot.H
  joints/joint/joint.H
  joints/joint/jointI.H
  joints/joints.H
  joints/null/nullJoint.H
  joints/rigid/rigid.H
  joints/rotating/rotating.H
  restraints/externalForce/externalForce.H
  restraints/linearAxialAngularSpring/linearAxialAngularSpring.H
  restraints/linearDamper/linearDamper.H
  restraints/linearSpring/linearSpring.H
  restraints/restraint/rigidBodyRestraint.H
  restraints/restraint/rigidBodyRestraintI.H
  restraints/sphericalAngularDamper/sphericalAngularDamper.H
  rigidBodyInertia/rigidBodyInertia.H
  rigidBodyInertia/rigidBodyInertiaI.H
  rigidBodyModel/rigidBodyModel.H
  rigidBodyModel/rigidBodyModelI.H
  rigidBodyModelState/rigidBodyModelState.H
  rigidBodyModelState/rigidBodyModelStateI.H
  rigidBodyMotion/rigidBodyMotion.H
  rigidBodyMotion/rigidBodyMotionI.H
  rigidBodySolvers/CrankNicolson/CrankNicolson.H
  rigidBodySolvers/Newmark/Newmark.H
  rigidBodySolvers/rigidBodySolver/rigidBodySolver.H
  rigidBodySolvers/rigidBodySolver/rigidBodySolverI.H
  rigidBodySolvers/symplectic/symplectic.H
)
install( TARGETS rigidBodyDynamics )
