add_library( sampling )
target_link_libraries( sampling
  PRIVATE
  OpenFOAM
  conversion
  fileFormats
  finiteVolume
  lagrangian
  surfMesh
)
target_include_directories( sampling
  PUBLIC
  .
)
target_sources( sampling
  PRIVATE
  coordSet/coordSet.C
  probes/patchProbes.C
  probes/probes.C
  probes/probesGrouping.C
  sampledSet/arcUniform/arcUniform.C
  sampledSet/boundaryPoints/boundaryPoints.C
  sampledSet/boundaryRandom/boundaryRandom.C
  sampledSet/boxUniform/boxUniform.C
  sampledSet/cellSetSampledSet/cellSetSampledSet.C
  sampledSet/circleRandom/circleRandom.C
  sampledSet/faceSetSampledSet/faceSetSampledSet.C
  sampledSet/lineCell/lineCell.C
  sampledSet/lineCellFace/lineCellFace.C
  sampledSet/lineFace/lineFace.C
  sampledSet/lineUniform/lineUniform.C
  sampledSet/points/points.C
  sampledSet/sampledSet/sampledSet.C
  sampledSet/sampledSet/sampledSetCloud.C
  sampledSet/sampledSet/sampledSetParticle.C
  sampledSet/sampledSets/sampledSets.C
  sampledSet/sphereRandom/sphereRandom.C
  sampledSet/triSurfaceMeshSampledSet/triSurfaceMeshSampledSet.C
  sampledSet/writers/csv/csvSetWriter.C
  sampledSet/writers/ensight/ensightSetWriter.C
  sampledSet/writers/gnuplot/gnuplotSetWriter.C
  sampledSet/writers/none/noSetWriter.C
  sampledSet/writers/raw/rawSetWriter.C
  sampledSet/writers/setWriter.C
  sampledSet/writers/vtk/vtkSetWriter.C
  sampledSurface/sampledCutPlane/sampledCutPlane.C
  sampledSurface/sampledDistanceSurface/sampledDistanceSurface.C
  sampledSurface/sampledIsoSurface/sampledIsoSurface.C
  sampledSurface/sampledIsoSurfaceSurface/sampledIsoSurfaceSurface.C
  sampledSurface/sampledPatch/sampledPatch.C
  sampledSurface/sampledPatchInternalField/sampledPatchInternalField.C
  sampledSurface/sampledSurface/sampledSurface.C
  sampledSurface/sampledSurfaces/sampledSurfaces.C
  sampledSurface/sampledThresholdCellFaces/sampledThresholdCellFaces.C
  sampledSurface/sampledThresholdCellFaces/thresholdCellFaces.C
  sampledSurface/sampledTriSurfaceMesh/sampledTriSurfaceMesh.C
  sampledSurface/writers/ensight/ensightPTraits.C
  sampledSurface/writers/ensight/ensightSurfaceWriter.C
  sampledSurface/writers/foam/foamSurfaceWriter.C
  sampledSurface/writers/none/noSurfaceWriter.C
  sampledSurface/writers/proxy/proxySurfaceWriter.C
  sampledSurface/writers/raw/rawSurfaceWriter.C
  sampledSurface/writers/surfaceWriter.C
  sampledSurface/writers/vtk/vtkSurfaceWriter.C

  PRIVATE
  FILE_SET HEADERS
  FILES
  coordSet/coordSet.H
  probes/IOprobes.H
  probes/patchProbes.H
  probes/probes.H
  sampledSet/arcUniform/arcUniform.H
  sampledSet/boundaryPoints/boundaryPoints.H
  sampledSet/boundaryRandom/boundaryRandom.H
  sampledSet/boxUniform/boxUniform.H
  sampledSet/cellSetSampledSet/cellSetSampledSet.H
  sampledSet/circleRandom/circleRandom.H
  sampledSet/faceSetSampledSet/faceSetSampledSet.H
  sampledSet/lineCell/lineCell.H
  sampledSet/lineCellFace/lineCellFace.H
  sampledSet/lineFace/lineFace.H
  sampledSet/lineUniform/lineUniform.H
  sampledSet/points/points.H
  sampledSet/sampledSet/sampledSet.H
  sampledSet/sampledSet/sampledSetCloud.H
  sampledSet/sampledSet/sampledSetParticle.H
  sampledSet/sampledSets/sampledSets.H
  sampledSet/sphereRandom/sphereRandom.H
  sampledSet/triSurfaceMeshSampledSet/triSurfaceMeshSampledSet.H
  sampledSet/writers/csv/csvSetWriter.H
  sampledSet/writers/ensight/ensightSetWriter.H
  sampledSet/writers/gnuplot/gnuplotSetWriter.H
  sampledSet/writers/none/noSetWriter.H
  sampledSet/writers/raw/rawSetWriter.H
  sampledSet/writers/setWriter.H
  sampledSet/writers/vtk/vtkSetWriter.H
  sampledSurface/sampledCutPlane/sampledCutPlane.H
  sampledSurface/sampledDistanceSurface/sampledDistanceSurface.H
  sampledSurface/sampledIsoSurface/sampledIsoSurface.H
  sampledSurface/sampledIsoSurfaceSurface/sampledIsoSurfaceSurface.H
  sampledSurface/sampledPatch/sampledPatch.H
  sampledSurface/sampledPatchInternalField/sampledPatchInternalField.H
  sampledSurface/sampledSurface/sampledSurface.H
  sampledSurface/sampledSurfaces/sampledSurfaces.H
  sampledSurface/sampledThresholdCellFaces/sampledThresholdCellFaces.H
  sampledSurface/sampledThresholdCellFaces/thresholdCellFaces.H
  sampledSurface/sampledTriSurfaceMesh/sampledTriSurfaceMesh.H
  sampledSurface/writers/ensight/ensightPTraits.H
  sampledSurface/writers/ensight/ensightSurfaceWriter.H
  sampledSurface/writers/foam/foamSurfaceWriter.H
  sampledSurface/writers/none/noSurfaceWriter.H
  sampledSurface/writers/proxy/proxySurfaceWriter.H
  sampledSurface/writers/raw/rawSurfaceWriter.H
  sampledSurface/writers/surfaceWriter.H
  sampledSurface/writers/vtk/vtkSurfaceWriter.H
)
install( TARGETS sampling )
